# asXai

./: .dockerignore  .env.compose  .env.example  .gitignore  LICENSE  README.md  config.py  docker-compose.yaml  params.yaml  pyproject.toml  requirements-no-torch.txt  requirements.txt  run_database_update.sh  setup.cfg
docker/: .env.compose.example  Dockerfile.api  Dockerfile.nlp  docker-compose.yaml  prometheus.yml  run_database_update.sh
docker/nginx/: nginx.conf
front/: .env.example  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
front/src/: App.css  ChatApp.css  ChatApp.jsx  Login.jsx  Signup.jsx  firebase-auth.jsx  main.jsx
notebooks/: chat_tests.ipynb  compute_embeddings.ipynb  config.py  exploration.ipynb  extract_pdfs.ipynb  fetch_database.ipynb  process.ipynb  rerank.ipynb  search_qdrant.ipynb
notebooks/mlruns/0/: meta.yaml
src/: logger.py  utils.py
src/asxai/: logger.py  utils.py
src/asxai/dataIO/: load.py  sync.py
src/asxai/dataset/: __init__.py  download.py  extract_embed_and_push.py
src/asxai/llms/: __init__.py  generate.py  mcp_library.py
src/dataIO/: __init__.py  load.py  sync.py
src/dataset/: __init__.py  dataset_loader.py  dataset_sync.py  db_dowloader.py  dowload.py  download.py  download_and_extract.py  download_and_extract_PDF.py  download_paperDB.py  embed_and_push.py  embed_and_push_PDF.py  extract_embed_and_push.py  pdf_extractor.py  utils.py  utils_Download.py  utils_PDF.py
src/frontend/: README.md  index.html  package-lock.json  package.json
src/pdf/: __init__.py  download_PDF.py  extract_PDF.py
src/services/: .dockerignore  Dockerfile
src/vectorDB/: __init__.py  embed.py  embed_and_push.py  push_qdrant.py  qdrant.py  rerank.py  utils_embeddings.py  utils_qdrant.py
streamlit/: asXai_streamlit.py
streamlit/data/: metadata_sample_2025.csv
streamlit/static/: styles.css
(+29 files in other folders)
