[metadata]
name = dataset_pipeline
version = 0.1.0
description = Tools to download, process, and extract datasets from Semantic Scholar and PDFs
author = Your Name
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
    pandas
    numpy
    requests
    tqdm
    selenium
    psutil
    pdfminer.six
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dataset-cli = dataset.cli:main